[build-system]
requires = ["setuptools>=82.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ensemble-method-stability-research"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}

dependencies = [
    "matplotlib==3.10.9",
    "pandas==3.0.2",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "ucimlrepo==0.0.7",
]